# rust-teos

teos/: Cargo.toml
teos-common/: Cargo.toml  build.rs
teos-common/src/: lib.rs  receipts.rs
teos/proto/teos/v2/: appointment.proto  tower_services.proto
teos/src/: cli.rs  dbm.rs  extended_appointment.rs  gatekeeper.rs  lib.rs  main.rs  responder.rs  startup.rs  test_utils.rs  watcher.rs
teos/src/api/: internal.rs
teos/tests/: end_to_end_client_test.rs
teos/tests/common/: mod.rs
watchtower-plugin/: Cargo.toml
watchtower-plugin/src/: convert.rs  dbm.rs  lib.rs  main.rs  wt_client.rs
watchtower-plugin/src/net/: http.rs
